# bevy_shader_test

./: Cargo.toml
.cargo/: config.toml
assets/shaders/: game_of_life.wgsl  utils.wgsl
src/: blur.rs  color.rs  decay.rs  main.rs
