[package]
name = "bevy_shader_test"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy = { version = "0.8.0", features = ["dynamic", "filesystem_watcher"] }
rand = "0.8.5"
bytemuck = "1.12.1"
bevy_egui = "0.15.1"
crossbeam-channel = "0.5.6"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3